--- a/Clase 1 HTML, CSS básico y uso de selectores/index.html
+++ b/Clase 1 HTML, CSS básico y uso de selectores/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initia-scale=1.0">
     <title>FrontPlatzi</title>
     <link rel="stylesheet" href="style.css">
   </head>
